Fixed a text alignment issue with new stream button.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -412,6 +412,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 #new-stream-cont {
     position: relative;
+    text-align: center;
     left: 20%;
 }
 
